@@ -1,3 +1,5 @@
+    ADDED: Ctrl+Up from panel focuses the origin editbox, Ctrl+Down from origin
+           editbox focuses the panel (thanks to Vaclav Juza)
     ADDED: TerminalEmulator: Ctrl+Shift+Up/Down always focus/unfocus TE
            independently whether the command line is shown or not
     ADDED: TerminalEmulator: if the command line is hidden, TE receives Ctrl+Up / 
